--- a/PizzeriaManuel/templates/PizzeriaManuel/padre.html
+++ b/PizzeriaManuel/templates/PizzeriaManuel/padre.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="{% url 'Inicio' %}">PizzeriaManuel</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
