inicio.html-pizzas.html

--- a/PizzeriaManuel/templates/PizzeriaManuel/pizzas.html
+++ b/PizzeriaManuel/templates/PizzeriaManuel/pizzas.html
@@ -32,7 +32,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#"></a></div>
+                        <div class="text-center"><a class="btn bt-outline-dark mt-auto" href="#"></a></div>
                     </div>
                 </div>
             </div>
